@@ -4,6 +4,8 @@ func init() {
 	AvailableChecks["check_eventlog"] = CheckEntry{"check_eventlog", NewCheckEventlog}
 }
 
+const DefaultUniqueIndex = "${log}-${source}-${id}"
+
 type CheckEventlog struct {
 	files           []string
 	timeZoneStr     string
@@ -54,7 +56,7 @@ a description of the provided fields.
 			"timezone":         {value: &l.timeZoneStr, description: "Sets the timezone for time metrics (default is local time)"},
 			"scan-range":       {value: &l.scanRange, description: "Sets time range to scan for message (default is 24h)"},
 			"truncate-message": {value: &l.truncateMessage, description: "Maximum length of message for each event log message text"},
-			"unique-index":     {value: &l.uniqueIndex, description: "Combination of fields that identify unique events (a good choice is \"${log}-${source}-${id}\")"},
+			"unique-index":     {value: &l.uniqueIndex, description: "Combination of fields that identifies unique events, set to 1 to use \"" + DefaultUniqueIndex + "\" or use any other string"},
 		},
 		defaultFilter:   "level in ('warning', 'error', 'critical')",
 		defaultWarning:  "level = 'warning' or problem_count > 0",
@@ -82,7 +84,7 @@ a description of the provided fields.
 
 Only return unique events:
 
-	check_eventlog "detail-syntax=%(id) %(uniqueindex)" "unique-index=1" 
+	check_eventlog "detail-syntax=%(id) %(uniqueindex)" "unique-index=1"
 	WARNING - 4 message(s) warning(10010 Application-Microsoft-Windows-RestartManager-10010, 10016 System-Microsoft-Windows-DistributedCOM-10016, 6155 System-LsaSrv-6155, 6147 System-LsaSrv-6147)
 	`,
 		exampleArgs: `filter=provider = 'Microsoft-Windows-Security-SPP' and id = 903 and message like 'foo'`,
