@@ -3,6 +3,7 @@ This file documents the revision history for the SNClient+ agent.
 next:
          - add http config ini includes
          - add osx pkg uninstaller
+         - add check_eventlog support for unique-index (mlueckert)
          - enable script aliases without enabling external scripts
          - update windows build framework to wix 3.14.1
          - rename build artifacts to use less confusing name (amd/arm)
